# Tradr-CLI

./: .gitignore  BitNet_Transformer_Training.ipynb  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_finbert_multithread.py  test_signal_fix.py
.qwen/: settings.json
scripts/: generate_ai_dataset.py  multi_backtest.py  optimize_strategy.py  sync_to_hf.sh  test_inference.py  train_ai_model.py  verify_ai_strategy.py
trading_cli/: __main__.py  app.py  config.py  run_dev.py
trading_cli/backtest/: __init__.py  engine.py
trading_cli/data/: asset_search.py  db.py  market.py  news.py
trading_cli/execution/: adapter_factory.py  alpaca_client.py
trading_cli/execution/adapters/: __init__.py  alpaca.py  base.py  binance.py  kraken.py  registry.py  yfinance.py
trading_cli/screens/: backtest.py  config_screen.py  dashboard.py  portfolio.py  sentiment.py  trades.py  watchlist.py
trading_cli/sentiment/: aggregator.py  finbert.py  news_classifier.py
trading_cli/strategy/: backtest.py  risk.py  scanner.py  signals.py  strategy_factory.py
trading_cli/strategy/adapters/: __init__.py  ai_fusion.py  base.py  hybrid.py  mean_reversion.py  mean_reversion_rsi2.py  momentum.py  regime_aware.py  registry.py  sentiment_driven.py  super_strategy.py  trend_following.py
trading_cli/strategy/ai/: bitlinear.py  model.py
trading_cli/widgets/: asset_autocomplete.py  ordered_footer.py  positions_table.py  sentiment_gauge.py  signal_log.py
